# ht

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  STYLING_ANALYSIS.md  WINDOWS.md
.github/workflows/: cross-platform-ci.yml  release.yml  windows-ci.yml
.memex/: rules.md
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
assets/: index.html
examples/embedding/: README.md  demo-colors.py  run-with-theme.sh  tailwind-neutral.css
scripts/: test-unix.sh  test-windows.ps1
src/: cli.rs  lib.rs  locale.rs  main.rs  nbio.rs  pty.rs  session.rs  tests.rs
src/api/: http.rs  stdio.rs
tests/: chunking_fix_validation_tests.rs  chunking_integration_test.rs  integration.rs  pty_buffer_overflow_tests.rs  pty_write_buffer_tests.rs  pty_write_logic_unit_tests.rs  shell_prompt_test.rs  stdio_large_input_tests.rs
tests/winpty-probe/: Cargo.toml
tests/winpty-probe/src/: main.rs
