[package]
name = "ht-core"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "Core headless terminal library - embedded terminal automation and scripting"
repository = "https://github.com/memextech/ht"
homepage = "https://github.com/memextech/ht"
documentation = "https://docs.rs/ht-core"
keywords = ["terminal", "headless", "automation", "tty", "pty"]
categories = ["command-line-utilities", "development-tools", "api-bindings"]
authors = ["Memex Tech <opensource@memex.tech>"]
readme = "../README.md"

[[bin]]
name = "ht"
path = "src/main.rs"

[lib]
name = "ht_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avt = "0.11.1"
nix = { version = "0.28.0", features = ["term", "process", "fs", "signal"] }
serde_json = "1.0.117"
mio = { version = "0.8.11", features = ["os-poll", "os-ext"] }
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5", default-features = false, features = ["http1", "ws", "query"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = "0.3.30"
rust-embed = "8.4.0"
mime_guess = "2.0.5"
uuid = { version = "1.0", features = ["v4"] }

