[package]
name = "ht-core"
version = "0.3.5"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "ht"
path = "src/main.rs"

[lib]
name = "ht_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avt = "0.11.1"
serde_json = "1.0.117"
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5", default-features = false, features = ["http1", "ws", "query"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = "0.3.30"
rust-embed = "8.4.0"
mime_guess = "2.0.5"
uuid = { version = "1.0", features = ["v4"] }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["term", "process", "fs", "signal"] }
mio = { version = "0.8.11", features = ["os-poll", "os-ext"] }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

