[package]
name = "winpty-probe"
version = "0.0.1"
edition = "2021"
publish = false

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }
